fixed icon overflow

--- a/css/style.css
+++ b/css/style.css
@@ -296,7 +296,7 @@ p {
 
 #icons {
     border: 3px solid red;
-    font-size: 4em;
+    font-size: 2em;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: repeat (1fr);
